<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/versionName"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/version"
        android:layout_centerHorizontal="true"
        android:text="@string/myName"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:textIsSelectable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/me"
        android:text="@string/app_name"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:textIsSelectable="false" />

</RelativeLayout>
